added hotel type